[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hephaestus"
version = "0.1.0"
description = "Forge tiny, purpose-built LLMs from any base model"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.40",
    "peft>=0.11.0",
    "trl>=0.9.0",
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "bitsandbytes>=0.43.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["hephaestus*"]
